<resources>
    <string name="app_name">MqttDeviceMon</string>
    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="connection_header">Connection</string>
    <string name="authentication_header">Authentication</string>
    <string name="message_header">Message</string>


    <!-- Connection Preferences -->
    <string name="connection_broker_title">Broker</string>
    <string name="connection_port_title">Port</string>

    <!-- Authentication Preferences -->
    <string name="authentication_user_title">Username</string>
    <string name="authentication_password_title">Password</string>
    <string name="authentication_certificate_title">Certificate</string>
    <!--  No password set  -->
    <string name="authentication_password_not_set">Not set</string>
    <string name="authentication_enable_title">Enable authentication</string>

    <!-- Message Preferences -->
    <string name="message_topic_title">Topic</string>
    <string name="message_interval_title">Publish data every n minutes</string>
    <string name="message_data_title">Device data to send</string>
    <string name="message_data_summary">Device data to send</string>

    <string name="btn_launch_client">Test Mqtt Client</string>
    <string name="btn_kill_client">Disconnect testing Mqtt Client</string>
    <string name="btn_launch_service">Launch Mqtt Service detached</string>
    <string name="btn_kill_service">Stop detached Mqtt Service</string>

    <string name="missing_settings">Switching to settings because both broker and topic need to be set!</string>
    <string name="settings_desc">Switch to settings</string>

    <string name="connection_text">Using broker at %s with port %d.</string>
    <string name="message_text">Publishing %s to topic %s every %d seconds.</string>
    <string name="bad_port">Broker port must not exceed the value range of [0, 65535], but was %d. Setting Port to default 1883.</string>
    <string name="could_connect">Connected to broker at %s:%d…</string>
    <string name="logging_view_hint">Logging of the mqtt connection…</string>

    <!--  logging messages  -->
    <string name="logging_disconnect">\nDisconnect from %s</string>
    <string name="logging_disconnect_any">\nDisconnect from broker…</string>
    <string name="logging_connect">\nConnect to broker at %s:%d…</string>
    <string name="logging_publish">\nPublish message\'%s\' to topic %s…</string>
    <string name="logging_could_not_connect">Could not connect to broker at %s:%d…</string>

    <!--  notification stuff  -->
    <string name="channel_name">Mqtt Background Publish Service</string>
    <string name="notification_title">Mqtt Background Publish Service Title</string>
    <string name="notification_message">Mqtt Background Publish Service Message</string>
    <string name="cancel_publisher">Stop publishing</string>
</resources>